# py-waveinfo

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pywav.pyi  waveinfo.pyi
.github/workflows/: CI.yml
docs/: changelog.md  index.md  ref_enums.md  ref_objects.md
src/: chunks.rs  errors.rs  lib.rs  util.rs
src/chunks/: errors.rs  fact.rs  fmt.rs  list.rs  mod.rs  tests.rs
src/formats/: mod.rs
src/public/: detail.rs  exceptions.rs  mod.rs  tests.rs  wave.rs
