[package]
name = "waveinfo"
version = "0.3.1"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "waveinfo"
crate-type = ["cdylib"]

[dependencies]
ascii = "1.1.0"
bytes = "1.7.1"
num_enum = "0.7.3"
pyo3 = "0.22.0"
strum = "0.26.3"
strum_macros = "0.26.4"
